<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="#ffe6e6e6"
                tools:context="ninjacoder.stuckinthemud.AddPlayerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_new_player"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#0106d1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/player_name"
        android:id="@+id/textView2"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="#0106d1"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPlayer"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:text="@string/add_new_player_button"
        android:id="@+id/addNewPlayerButton"
        android:onClick="addNewPlayer"
        android:layout_below="@+id/newPlayer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/light_blue_button"
        android:textColor="#fefefe"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:id="@+id/cancelButton"
        android:onClick="cancel"
        android:background="@drawable/pink_button"
        android:textColor="#fefefe"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@+id/clearPlayers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_player"
        android:id="@+id/clearPlayers"
        android:layout_below="@+id/addNewPlayerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/purple_button"
        android:textColor="#fefefe"
        android:textStyle="bold"
        android:textSize="18sp"
        android:onClick="clearPlayers"/>

</RelativeLayout>
