<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="#ffe6e6e6"
                tools:context="ninjacoder.stuckinthemud.PlayGameActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_button"
        android:id="@+id/rollButton"
        android:onClick="rollDice"
        android:background="@drawable/light_blue_button"
        android:textColor="#fefefe"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/round"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:id="@+id/mainMenu"
        android:onClick="goToMainMenu"
        android:layout_below="@+id/rollButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:background="@drawable/pink_button"
        android:textColor="#fefefe"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/playerName"
        android:textColor="#5c015e"
        android:text="@string/display_player_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/round"
        android:onClick="goToMainMenu"
        android:textColor="#5c015e"
        android:text="@string/rotation"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/playerName"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/player_score"
        android:id="@+id/score"
        android:layout_alignParentStart="true"
        android:textColor="#5c015e"
        android:layout_below="@+id/round"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/highest_scoring_player"
        android:id="@+id/highestPlayer"
        android:textColor="#5c015e"
        android:layout_above="@+id/die1"
        android:layout_toRightOf="@+id/die4"
        android:layout_toEndOf="@+id/die4"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/die1"
        android:layout_below="@+id/score"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/die_1"
        android:layout_marginRight="5dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/die2"
        android:layout_alignBottom="@+id/die1"
        android:layout_toRightOf="@+id/die1"
        android:layout_toEndOf="@+id/die1"
        android:background="@drawable/die_2"
        android:layout_marginRight="5dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/die3"
        android:layout_alignBottom="@+id/die2"
        android:layout_toRightOf="@+id/die2"
        android:layout_toEndOf="@+id/die2"
        android:background="@drawable/die_3"
        android:layout_marginRight="5dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/die4"
        android:layout_alignBottom="@+id/die3"
        android:layout_toRightOf="@+id/die3"
        android:layout_toEndOf="@+id/die3"
        android:layout_marginRight="5dp"
        android:background="@drawable/die_4"
        android:adjustViewBounds="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/die5"
        android:layout_alignBottom="@+id/die4"
        android:layout_toRightOf="@+id/die4"
        android:layout_toEndOf="@+id/die4"
        android:background="@drawable/die_5"/>

</RelativeLayout>
