<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="#ffe6e6e6"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:textSize="30dp"
        android:id="@+id/title"
        android:textColor="#0106d1"
        android:layout_below="@+id/sound"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:text="@string/play_button"
        android:id="@+id/playButton"
        android:onClick="playGame"
        android:background="@drawable/light_blue_button"
        android:textColor="#fefefe"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_above="@+id/addPlayerButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/add_player_button"
        android:id="@+id/addPlayerButton"
        android:onClick="addNewPlayer"
        android:background="@drawable/purple_button"
        android:textColor="#fefefe"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="ninjacoder.stuckinthemud.PlayerList"
        android:id="@+id/playerList"
        tools:layout="@layout/fragment_player_list"
        android:layout_below="@+id/addPlayerButton"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/sound"
        android:background="@drawable/sound"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="sound"/>


</RelativeLayout>
